--- a/Master Project/biblio.bib
+++ b/Master Project/biblio.bib
@@ -18,6 +18,59 @@ year = {1954},
   publisher={Wiley}
 }
 
+@book{inference,
+  title={Inference for Functional Data with Applications},
+  author={Horv{\'a}th, L. and Kokoszka, P.},
+  isbn={9781461436546},
+  lccn={2012937071},
+  series={Springer Series in Statistics},
+  url={https://books.google.ch/books?id=PGOCtgAACAAJ},
+  year={2012},
+  publisher={Springer New York}
+}
+
+@book{fdaram,
+  title={Functional Data Analysis},
+  author={Ramsay, J. and Silverman, B.W.},
+  isbn={9780387400808},
+  lccn={2005923773},
+  series={Springer Series in Statistics},
+  url={https://books.google.ch/books?id=mU3dop5wY\_4C},
+  year={2005},
+  publisher={Springer}
+}
+
+@article{pace,
+author = {Fang Yao and Hans-Georg Müller and Jane-Ling Wang},
+title = {Functional Data Analysis for Sparse Longitudinal Data},
+journal = {Journal of the American Statistical Association},
+volume = {100},
+number = {470},
+pages = {577-590},
+year  = {2005},
+publisher = {Taylor & Francis},
+doi = {10.1198/016214504000001745},
+
+URL = { 
+        https://doi.org/10.1198/016214504000001745
+    
+},
+eprint = { 
+        https://doi.org/10.1198/016214504000001745
+    
+}
+}
+
+@book{apfda,
+  title={Applied Functional Data Analysis: Methods and Case Studies},
+  author={Ramsay, J.O. and Silverman, B.W.},
+  isbn={9781475789362},
+  series={Springer Series in Statistics},
+  url={https://books.google.ch/books?id=lAn1sgEACAAJ},
+  year={2013},
+  publisher={Springer New York}
+}
+
 @article {Kraus1,
 author = {Kraus, David},
 title = {Components and completion of partially observed functional data},
